--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>spring-context</artifactId>
       <version>6.0.13</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
